# rsi-laser-demo

./: .gitignore  CAMERA_CONFIG_TUNING.md  CAMERA_FLOW_ANALYSIS.md  CMakeLists.txt  rsi.lic
RTTaskFunctions/src/: rttaskfunctions.cpp
config/: multiaxis.xml  settings.xml  x.xml  z.xml
include/helpers/: shared_memory_helpers.h
rttasks/: rttaskfunctions.cpp  rttaskglobals.h
rttasks/include/: shared_data_helpers.h  shared_memory_helpers.h
rttasks/src/: camera_helpers.cpp
scripts/: demo_startup.sh  rapidserver_run.sh  remote_demo_startup.sh  server_camera_run.sh  stop_stress.sh  stress.sh  tune_system.sh
servers/camera/: HttpCameraServer.cs  HttpCameraServer.csproj
src/: laser_main.cpp
ui/: Directory.Packages.props
ui/RapidLaser/: App.axaml  App.axaml.cs  GlobalUsings.cs  RapidLaser.csproj  RapidLaser.json
ui/RapidLaser/Controls/: ProgressGoalChart.axaml  ProgressGoalChart.axaml.cs  ProgressRing.axaml.cs  StatusLabel.axaml
ui/RapidLaser/Converters/: BoolConverters.cs  GlobalConverters.cs
ui/RapidLaser/Globals/: GlobalConverters.cs  GlobalUsings.cs
ui/RapidLaser/Models/: RtTask.cs
ui/RapidLaser/Resources/: Converters.cs
ui/RapidLaser/Services/: HttpCameraService.cs  RmpGrpcService.cs  SshService.cs
ui/RapidLaser/ViewModels/: MainViewModel.cs
ui/RapidLaser/Views/: MainView.axaml
